Conclusão do projeto

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Alura MIDI</title>
+    <title>MIDI</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +17,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 
 </head>
+
 <body>
 
-    <h1>Alura Midi</h1>
+    <h1>Midi</h1>
 
     <section class="teclado">
         <button class="tecla tecla_pom">Pom</button>
@@ -47,4 +49,5 @@
     <script src="main.js"></script>
 
 </body>
+
 </html>
